<resources>
    <string name="app_name">TrainSearch</string>
    <string name="welcome_slogo">欢迎登录</string>
    <string name="user">用户</string>
    <string name="pwd">密码</string>
    <string name="loginin">登录</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="register"><u>立即注册</u></string>
</resources>
